--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,14 @@ header a {
   gap: 20px;
 }
 
+.drop-down {
+  display: block;
+  position: absolute;
+  min-width: 160px;
+  padding: 12px 16px;
+  z-index: 1;
+}
+
 .left-bar {
   display: flex;
   flex-direction: column;
