--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: sans-serif;
+  background-color: #1E1E1E;
+  color: #fff;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 ol,
@@ -10,45 +18,84 @@ ul {
   padding: 0;
 }
 
-main {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  column-gap: 10px;
+a:link {
+  text-decoration: none;
 }
 
-header {
-  background-color: rgb(212, 50, 50);
-  color: #fff;
-  padding: 50px 30px 50px 30px;
-  
-}
-
-header .topbar {
-  /* display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr; */
-  display: flex;
+.main-page {
+  display:flex;
   flex-direction: column;
 }
 
-header a {
+header {
   color: #fff;
 }
 
-.search-container {
-  text-align: center;
-  /* margin-top: 40px; */
+header {
+  padding: 20px;
 }
 
-.search {
-  background-color: #fff;
-  padding: 30px;
-  display: inline-block;
+.topbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0;
 }
+
+.logo {
+  width: 100%;
+  font-size: 34px;
+  color: white;
+}
+
+.search-wrapper {
+  display: flex;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: center;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-container a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  position: relative;
+}
+
+.nav-container a::before {
+  content: '';
+  background-color: red;
+  position: absolute;
+  left: 0;
+  bottom: 3px;
+  width: 100%;
+  height: 8px;
+  z-index: -1;
+  transition: all .3s ease-in-out;
+}
+
+.nav-container a:hover::before {
+  bottom: 0;
+  height: 100%;
+}
+
 
 .search-form {
   display: flex;
-  gap: 20px;
+  /* gap: 20px; */
+}
+
+.search svg {
+  width: 15px;
+  fill: #fff;
 }
 
 .drop-down {
@@ -59,72 +106,40 @@ header a {
   z-index: 1;
 }
 
-.left-bar {
+.nav-container {
+  padding-top: 20px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
 }
 
-.library {
-  flex-grow: 1;
-}
-
-@media (min-width: 600px) {
-  .topbar {
-    display: flex;
-    gap: 20px;
-  }
-}
-
-.topbar .navigation {
-  flex-grow: 1;
-}
-
-.topbar .navigation ol {
-  display: flex;
-  gap: 20px;
-}
-
-.profile svg {
-  width: 15px;
-  /* fill: #fff; */
-}
-
-.search svg {
-  width: 15px;
-  fill: #000;
+h2 {
+  padding-left: 40px;
 }
 
 .movie-list {
-  margin: 30px;
+  margin: 10px 20px;
   display: grid;
   grid-auto-flow: column;
-  /* grid-auto-columns: 26%; */
   gap: 20px;
+  max-width: 100%;
+  min-height: 350px;
   overflow-x: auto;
-  /* overscroll-behavior-inline: contain; */
 }
 
 .movie-card {
   width: 100%;
   border-radius: 25px;
+  min-height: 250px;
   max-height: 250px;
+  min-width: 150px;
   max-width: 150px;
 }
 
 .movie-details {
   position: relative;
 }
-
-/* .movie-text-box {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  background-color: black;
-  color: white;
-  padding-left: 20px;
-  padding-right: 20px;
-  backdrop-filter: blur(30px); 
-} */
 
 .movie-poster {
   max-width: 100%;
@@ -133,19 +148,17 @@ header a {
   border-radius: 10px;
   /* padding: 5px; */
 }
-
-/* @media (min-width: 600px) {
-  .movie-card {
+@media (min-width: 600px) {
+  .topbar {
     display: flex;
     gap: 20px;
   }
-  .movie-card {
-    text-align: center;
-    width: 70px;
-  }
-} */
+}
+
 
 footer {
+  grid-column: 1 / span 2;
+  grid-row: 3 / span 1;
   background-color: rgb(51, 51, 51);
   color: #fff;
   padding: 50px 30px 50px 30px;
@@ -156,7 +169,7 @@ footer {
     display: flex;
   }
 
-  footer div {
+footer div {
     flex-grow: 1;
   }
 }
@@ -165,9 +178,6 @@ footer h4 {
   margin: 0;
 }
 
-footer a {
-  color: #fff;
-}
 
 .genre-pill {
   background-color: #ddd;
@@ -180,5 +190,20 @@ footer a {
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 16px;
+}
+
+.movie-content {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.left-bar {
+  grid-column: 1 / span 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.right-bar {
+  grid-column: 2 / span 1;
 }
 
