--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,10 +5,12 @@
 body {
   margin: 0;
   font-family: sans-serif;
-  background-color: #1E1E1E;
+  background: linear-gradient(135deg, hsla(0, 0%, 12%, 1) 50%, hsla(0, 0%, 40%, 1) 100%);
   color: #fff;
+  min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
+  padding: 50px;
 }
 
 ol,
@@ -27,6 +29,11 @@ a:link {
   flex-direction: column;
 }
 
+.search-page {
+  display:flex;
+  flex-direction: column;
+}
+
 header {
   color: #fff;
 }
@@ -37,20 +44,24 @@ header {
 
 .topbar {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+
   padding: 10px 0;
 }
 
 .logo {
-  width: 100%;
   font-size: 34px;
   color: white;
+  flex: 1;
+  padding: 20px
 }
 
 .search-wrapper {
   display: flex;
+  width:100%;
+  align-self: flex-end;
+  padding: 20px;
 }
 
 .navbar-container {
@@ -87,15 +98,43 @@ a {
   height: 100%;
 }
 
+.search-wrapper {
+  justify-content: center;
+}
+
 
 .search-form {
   display: flex;
-  /* gap: 20px; */
+  gap: 10px;
+
 }
 
 .search svg {
   width: 15px;
-  fill: #fff;
+  fill: #000;
+}
+
+.like-button svg {
+  width: 15px;
+  fill: #000;
+}
+
+.search input {
+  align-items: center;
+  border-radius: 8px;
+  padding: 12px;
+  width: 500px;
+}
+
+.search input:focus {
+  outline: none;
+}
+
+.search button {
+  align-items: center;
+  border-radius: 25px;
+  padding: 12px;
+  cursor: pointer;
 }
 
 .drop-down {
@@ -104,6 +143,7 @@ a {
   min-width: 160px;
   padding: 12px 16px;
   z-index: 1;
+  background-color: #1E1E1E;
 }
 
 .nav-container {
@@ -126,6 +166,12 @@ h2 {
   max-width: 100%;
   min-height: 350px;
   overflow-x: auto;
+  padding-bottom: 50px;
+}
+
+.home-content.movie-list::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
 }
 
 .movie-card {
@@ -133,8 +179,10 @@ h2 {
   border-radius: 25px;
   min-height: 250px;
   max-height: 250px;
-  min-width: 150px;
-  max-width: 150px;
+  min-width: 200px;
+  max-width: 200px;
+  background-color: #1E1E1E;
+  cursor: pointer;
 }
 
 .movie-details {
@@ -146,7 +194,6 @@ h2 {
   max-height: 100%;
   object-fit: contain;
   border-radius: 10px;
-  /* padding: 5px; */
 }
 @media (min-width: 600px) {
   .topbar {
@@ -154,14 +201,29 @@ h2 {
     gap: 20px;
   }
 }
+.movie-background-box {
+  position: absolute;
+  top: 100%;
+  transform: translate(0, -100%);
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #fff;
+  font-size: 14px;
+  width: 100%;
+  padding: 10px;
+}
+
+.movie-text-box .li {
+  color: #fff;
+  opacity: 1;
+}
 
 
 footer {
   grid-column: 1 / span 2;
   grid-row: 3 / span 1;
-  background-color: rgb(51, 51, 51);
   color: #fff;
-  padding: 50px 30px 50px 30px;
+  padding: 20px;
+
 }
 
 @media (min-width: 600px) {
@@ -184,7 +246,7 @@ footer h4 {
   border: none;
   color: black;
   padding: 5px 10px;
-  height: 25px;
+  height: auto;
   font-size: small;
   text-align: center;
   text-decoration: none;
@@ -194,9 +256,15 @@ footer h4 {
   border-radius: 16px;
 }
 
+.genre-pill.selected {
+  background-color: red; /* Green background for selected state */
+  color: white; /* White text color for selected state */
+}
+
 .movie-content {
   display: grid;
   grid-template-columns: auto auto;
+  grid-template-rows: auto;
 }
 
 .left-bar {
@@ -217,5 +285,33 @@ footer h4 {
   gap: 20px;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 0px 50px;
 }
 
+.right-bar .movie-card {
+  min-height: 350px;
+}
+
+.like-button {
+  background-color: #ddd;
+  border: none;
+  color: black;
+  padding: 5px 10px;
+  height: auto;
+  font-size: small;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+}
+
+.like-button.favourited {
+  background-color: red; /* Green background for selected state */
+  color: white; /* White text color for selected state */
+}
+
+.watchlist-footer {
+  margin-bottom: 0;
+}
