--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -176,6 +176,7 @@ h2 {
   gap: 20px;
   max-width: 100%;
   overflow-x: auto;
+  min-height: 320px;
   padding-bottom: 50px;
 }
 
@@ -187,6 +188,13 @@ h2 {
   min-width: 200px;
   max-width: 200px;
   cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+
+.movie-card:hover {
+  transform: scale(1.1); 
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); 
+  z-index: 1; 
 }
 
 .movie-details {
@@ -298,6 +306,7 @@ footer h4 {
   flex-wrap: wrap;
   padding: 0px 50px;
   overflow-y: auto;
+  min-height: 325px;
   max-height: 600px;
 }
 
