--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,8 @@ body {
   min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
-  padding: 50px;
+  overscroll-behavior: none;
+  padding: 10px;
 }
 
 ol,
@@ -102,9 +103,6 @@ a {
 
 /* mobile */
 @media (max-width: 768px) {
-  body {
-    padding: 50px;
-  }
 
   .topbar {
     display: grid;
@@ -170,6 +168,61 @@ a {
     font-weight: bold;
   }
   
+  .filter-container svg{
+  width: 15px;
+  fill: #fff;
+  }
+  .genre-list.active {
+    display: flex;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    font-size: 14px;
+    z-index: 1;
+    top: 100%;
+    width: 100vw;
+    margin-left: -81vw;
+    left: -100%;
+    margin-top: 10px;
+  }
+
+  .home-content .inner-movie-list {
+    margin: 10px 20px;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 20px;
+    max-width: 100%;
+    overflow-x: auto;
+    max-height: 225px;
+  }
+
+  .right-bar .inner-movie-list {
+    display: flex;
+    padding: 10px;
+    gap: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    min-height: 325px;
+    max-height: 600px;
+  }
+
+  .movie-card {
+    width: 100%;
+    border-radius: 25px;
+    min-height: 200px;
+    max-height: 200px;
+    min-width: 125px;
+    max-width: 125px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  }
+
+  .movie-details-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
 }
 
 /* Medium devices */ 
@@ -225,6 +278,39 @@ a {
   .nav-container a:hover::before {
     bottom: 0;
     height: 100%;
+  }
+
+  .home-content .inner-movie-list {
+    margin: 10px 20px;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 20px;
+    max-width: 100%;
+    overflow-x: auto;
+    min-height: 320px;
+    padding-bottom: 50px;
+  }
+
+  .right-bar .inner-movie-list {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0px 50px;
+    overflow-y: auto;
+    min-height: 325px;
+    max-height: 600px;
+  }
+
+  .movie-card {
+    width: 100%;
+    border-radius: 25px;
+    min-height: 325px;
+    max-height: 325px;
+    min-width: 200px;
+    max-width: 200px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
   }
 }
 
@@ -292,6 +378,38 @@ a {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); 
     z-index: 1; 
   }
+  .home-content .inner-movie-list {
+    margin: 10px 20px;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 20px;
+    max-width: 100%;
+    overflow-x: auto;
+    min-height: 320px;
+    padding-bottom: 50px;
+  }
+
+  .right-bar .inner-movie-list {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0px 50px;
+    overflow-y: auto;
+    min-height: 325px;
+    max-height: 600px;
+  }
+
+  .movie-card {
+    width: 100%;
+    border-radius: 25px;
+    min-height: 325px;
+    max-height: 325px;
+    min-width: 200px;
+    max-width: 200px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  }
 }
 
 
@@ -347,27 +465,7 @@ h2 {
   padding-left: 20px;
 }
 
-.home-content .inner-movie-list {
-  margin: 10px 20px;
-  display: grid;
-  grid-auto-flow: column;
-  gap: 20px;
-  max-width: 100%;
-  overflow-x: auto;
-  min-height: 320px;
-  padding-bottom: 50px;
-}
 
-.movie-card {
-  width: 100%;
-  border-radius: 25px;
-  min-height: 250px;
-  max-height: 250px;
-  min-width: 200px;
-  max-width: 200px;
-  cursor: pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; 
-}
 
 
 
@@ -385,10 +483,10 @@ h2 {
 .movie-background-box {
   position: absolute;
   top: 100%;
-  transform: translate(0, -107%);
+  transform: translate(0, -105%);
   background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
-  font-size: 12px;
+  font-size: 14px;
   width: 100%;
   border-radius: 0 0 20px 20px;
 }
@@ -420,7 +518,7 @@ footer {
 
 }
 
-@media (min-width: 600px) {
+
   footer {
     display: flex;
   }
@@ -428,7 +526,7 @@ footer {
 footer div {
     flex-grow: 1;
   }
-}
+
 
 footer h4 {
   margin: 0;
@@ -472,37 +570,18 @@ footer h4 {
 }
 
 .movie-content {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto;
+display: flex;
+flex-direction: row;
 }
 
 .left-bar {
-  grid-column: 1 / span 1;
   display: flex;
   flex-direction: column;
-  min-width: 200px;
-  max-width: 250px;
   padding: 15px;
 }
 
 .right-bar {
   grid-column: 2 / span 1;
-}
-
-.right-bar .inner-movie-list {
-  display: flex;
-  gap: 20px;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: 0px 50px;
-  overflow-y: auto;
-  min-height: 325px;
-  max-height: 600px;
-}
-
-.right-bar .movie-card {
-  min-height: 350px;
 }
 
 .like-button {
