--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,21 +85,22 @@ a {
   border-radius: 25px;
   padding: 12px;
   width: 100%;
-  background-color: #9f9e9e;
+  background-color: #3e3e3e;
   color: #000;
 }
 
 .search-form {
   display: flex;
   gap: 10px;
-  background-color: #9f9e9e;
+  background-color: #3e3e3e;
   border-radius: 25px;
 }
 
 .search svg {
   width: 15px;
-  fill: #000;
+  fill: #fff;
 }
+
 
 /* mobile */
 @media (max-width: 768px) {
@@ -149,9 +150,8 @@ a {
     z-index: 1;
     top: 100%;
     width: 100vw;
-    margin-left: -81vw;
-    left: -100%;
     margin-top: 10px;
+    right: -180%;
   }
 
   .nav-links li {
@@ -172,6 +172,7 @@ a {
   width: 15px;
   fill: #fff;
   }
+
   .genre-list.active {
     display: flex;
     position: absolute;
@@ -268,9 +269,9 @@ a {
     background-color: red;
     position: absolute;
     left: 0;
-    bottom: 3px;
+    bottom: 10px;
     width: 100%;
-    height: 8px;
+    height: 2px;
     z-index: -1;
     transition: all .3s ease-in-out;
   }
@@ -296,10 +297,14 @@ a {
     gap: 20px;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0px 50px;
+    padding: 0px 20px;
     overflow-y: auto;
     min-height: 325px;
     max-height: 600px;
+  }
+
+  .left-bar {
+    max-width: 250px;
   }
 
   .movie-card {
@@ -311,6 +316,10 @@ a {
     max-width: 200px;
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  }
+
+  .filter-arrow {
+    display: none;
   }
 }
 
@@ -389,12 +398,16 @@ a {
     padding-bottom: 50px;
   }
 
+  .left-bar {
+    max-width: 250px;
+  }
+
   .right-bar .inner-movie-list {
     display: flex;
     gap: 20px;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0px 50px;
+    padding: 0px 20px;
     overflow-y: auto;
     min-height: 325px;
     max-height: 600px;
@@ -403,12 +416,16 @@ a {
   .movie-card {
     width: 100%;
     border-radius: 25px;
-    min-height: 325px;
-    max-height: 325px;
+    min-height: 300px;
+    max-height: 300px;
     min-width: 200px;
     max-width: 200px;
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  }
+
+  .filter-arrow {
+    display: none;
   }
 }
 
@@ -435,6 +452,10 @@ a {
   border: none;
 }
 
+.search input::placeholder{
+  color: #fff;
+}
+
 .search input:focus {
   outline: none;
 }
@@ -445,7 +466,7 @@ a {
   padding: 12px;
   cursor: pointer;
   border: none;
-  background-color: #9f9e9e;
+  background-color: #3e3e3e;
 }
 
 .drop-down {
@@ -465,15 +486,12 @@ h2 {
   padding-left: 20px;
 }
 
-
-
-
-
 .movie-details {
   position: relative;
 }
 
 .movie-poster {
+  min-height: 200px;
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
@@ -640,4 +658,24 @@ flex-direction: row;
 
 .tmdb-logo {
   padding: 10px;
+}
+
+.inner-movie-list::-webkit-scrollbar {
+  display: none;
+}
+
+.inner-movie-list {
+  scrollbar-width: none;
+}
+
+.alert {
+  position: fixed;
+  top: -50px;
+  right: 5px;
+  background-color: #3d3d3d;
+  color: #f2f0f0;
+  padding: 10px 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
 }
