--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,6 +224,26 @@ a {
     flex-direction: column;
   }
 
+  .cast-list {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    padding: 0px 20px;
+    overflow-y: auto;
+    max-height: 150px;
+    scrollbar-width: none;
+  }
+
+  .actor-poster {
+    width: 100px;
+    height: 100px;
+    object-position: 50% 20%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+
+
 }
 
 /* Medium devices */ 
@@ -321,6 +341,30 @@ a {
   .filter-arrow {
     display: none;
   }
+
+  .cast-list {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    padding: 0px 20px;
+    overflow-y: auto;
+    min-height: 320px;
+    scrollbar-width: none;
+  }
+
+  .actor-poster {
+    width: 150px;
+    height: 150px;
+    object-position: 50% 20%;
+  
+    /* object-fit: contain; */
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  .actor-text-box {
+    font-size: 10px;
+  }
+
 }
 
 
@@ -426,6 +470,26 @@ a {
 
   .filter-arrow {
     display: none;
+  }
+
+  .cast-list {
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    padding: 0px 20px;
+    overflow-y: auto;
+    min-height: 320px;
+    scrollbar-width: none;
+  }
+
+  .actor-poster {
+    width: 150px;
+    height: 150px;
+    object-position: 50% 20%;
+  
+    /* object-fit: contain; */
+    border-radius: 50%;
+    object-fit: cover;
   }
 }
 
@@ -625,13 +689,16 @@ flex-direction: row;
   margin-top: auto;
 }
 
-.movie-details-wrapper {
+/*movie information page */
+
+.movie-details-page {
   display: flex;
+  flex-direction: column;
+  padding:  0 20px;
 }
 
-
-.movie-details-page .home-content {
-  padding-top: 50px;
+.movie-details-wrapper {
+  display: flex;
 }
 
 .movie-details-text-wrapper {
@@ -645,15 +712,35 @@ flex-direction: row;
 
 .movie-information {
   display: flex;
+  align-items: center;
 }
 
 .movie-information h3 {
-  padding: 0 30px;
+  padding-right: 10px;
 }
 
 .movie-information-overview {
-  flex-direction: column;
-  padding-left: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.release-year p {
+  background-color: #3e3e3e;
+  color: #fff;
+  padding: 10px;
+  border-radius: 25px;
+}
+
+.imdb-rating p {
+  background-color: #3e3e3e;
+  color: #fff;
+  padding: 10px;
+  border-radius: 25px;
+}
+
+.movie-details-page .home-content {
+  padding-top: 50px;
 }
 
 .tmdb-logo {
@@ -679,3 +766,10 @@ flex-direction: row;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
+
+.actor-poster-container {
+  /* width: 150px;
+  height: 150px; */
+}
+
+
