--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -242,7 +242,15 @@ a {
     object-fit: cover;
   }
 
-
+  .search-results .inner-movie-list {
+    justify-content: center;
+  }
+  .movie-card img {
+    width: 100%;
+    height: 200px; /* or however tall you want the image container */
+    object-fit: cover;
+    background-color: #f0f0f0; /* a background color for when the image is missing */
+  }
 
 }
 
